--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ click = "^8.1.7"
 requests = "^2.32.3"
 crossrefapi = "^1.6.0"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.4.9"
+
 [tool.poetry.scripts]
 scidock = "scidock:main"
 
