Added TUI and support for arXiv

--- a/ruff.toml
+++ b/ruff.toml
@@ -9,8 +9,8 @@ indent-width = 4
 target-version = "py312"
 
 [lint]
-select = ["E", "F", "B", "W", "N", "S", "UP", "A", "COM", "C4", "ISC", "ICN", "G", "RET", "SIM", "TID", "PTH", "PL", "RSE", "RUF", "I"]
-ignore = ["PTH123"]
+select = ["B", "C", "E", "W", "F", "I", "N", "S", "UP", "A", "ISC", "ICN", "G", "RET", "SIM", "TID", "PTH", "PL", "RSE", "RUF", "ERA", "PT", "LOG"]
+ignore = ["PTH123", "S311"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
