--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 click = "^8.1.7"
-requests = { version = "^2.32.0", extras = ["socks"] }
+requests = { version = "^2.32.3", extras = ["socks"] }
 crossrefapi = "^1.6.0"
-arxiv = { git = "https://github.com/lukasschwab/arxiv.py.git" }
+arxiv = "^2.1.2"
 rich = "^13.7.1"
 questionary = "^2.0.1"
 click-params = "^0.5.0"
 beautifulsoup4 = "^4.12.3"
+rapidfuzz = "^3.9.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.9"
