--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ questionary = "^2.0.1"
 click-params = "^0.5.0"
 beautifulsoup4 = "^4.12.3"
 rapidfuzz = "^3.9.3"
+pyyaml = "^6.0.1"
+colorlog = "^6.8.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.9"
