--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ colorlog = "^6.8.2"
 ruff = "^0.4.9"
 
 [tool.poetry.scripts]
-scidock = "scidock:main"
+scidock = "scidock.scidock:main"
 
 [build-system]
 requires = ["poetry-core"]
