--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Install project and setup the test environment
         run: poetry install --no-interaction --without=dev
       - name: Run FS pre-init tests
-        run: python -m pytest tests/test_fs.py -k init
+        run: poetry run pytest tests/test_fs.py -k init
       - name: Run search tests
-        run: python -m pytest tests/test_search.py
+        run: poetry run pytest tests/test_search.py
       - name: Run FS post-init tests
-        run: python -m pytest tests/test_fs.py -k 'not init'
+        run: poetry run pytest tests/test_fs.py -k 'not init'
