--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ beautifulsoup4 = "^4.12.3"
 rapidfuzz = "^3.9.3"
 pyyaml = "^6.0.1"
 colorlog = "^6.8.2"
+tldextract = "^5.1.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.4.9,<0.6.0"
