--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ rapidfuzz = "^3.9.3"
 pyyaml = "^6.0.1"
 colorlog = "^6.8.2"
 tldextract = "^5.1.2"
+defusedxml = "^0.7.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = ">=0.4.9,<0.6.0"
