--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,23 @@ repository = "https://github.com/kgleba/scidock"
 packages = [
     { include = "scidock" }
 ]
+keywords = ["research", "science", "free science", "cli"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Science/Research",
+    "Natural Language :: English",
+    "Natural Language :: Russian",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13"
+]
 
 [tool.poetry.dependencies]
-python = "~3.12"
+python = "^3.10"
 click = "~8.1.7"
 requests = { version = "~2.32.3", extras = ["socks"] }
 crossrefapi = "~1.6.0"
@@ -20,10 +34,9 @@ questionary = "~2.0.1"
 click-params = "~0.5.0"
 beautifulsoup4 = "~4.12.3"
 rapidfuzz = "~3.9.3"
-pyyaml = "~6.0.1"
-colorlog = "~6.8.2"
 tldextract = "~5.1.2"
 defusedxml = "~0.7.1"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "~0.5.0"
