--- a/server/web/ruff.toml
+++ b/server/web/ruff.toml
@@ -1,6 +1,5 @@
 exclude = [
     ".git",
-    "scidock-nlp"
 ]
 
 line-length = 140
@@ -10,7 +9,7 @@ target-version = "py312"
 
 [lint]
 select = ["B", "C", "E", "W", "F", "I", "N", "S", "UP", "A", "ISC", "ICN", "G", "RET", "SIM", "TID", "PTH", "PL", "RSE", "RUF", "ERA", "PT", "LOG"]
-ignore = ["PTH123", "S311"]
+ignore = ["PTH123", "S311", "ERA001", "RET504"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -20,5 +19,4 @@ unfixable = []
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [lint.pylint]
-max-args = 6
 max-returns = 7
