--- a/server/web/pyproject.toml
+++ b/server/web/pyproject.toml
@@ -1,23 +1,43 @@
-[tool.poetry]
+[project]
 name = "web"
 version = "1.0.0"
 description = ""
-authors = ["kgleba <kgleba@yandex.ru>"]
-
-[tool.poetry.dependencies]
-python = "^3.12"
-fastapi = "^0.111.1"
-aiohttp = {extras = ["speedups"], version = "^3.9.5"}
-loguru = "^0.7.2"
-aiohttp-client-cache = "^0.11.0"
-defusedxml = "^0.7.1"
-feedparser = "^6.0.11"
-fake-useragent = "^1.5.1"
-beautifulsoup4 = "^4.12.3"
-async-lru = "^2.0.4"
-sse-starlette = "^2.1.2"
-uvicorn = "^0.30.4"
+authors = [
+    { name = "kgleba", email = "kgleba@yandex.ru" }
+]
+dependencies = [
+    "fastapi>=0.112.0",
+    "aiohttp>=3.10.0",
+    "aiohttp-client-cache>=0.11.1",
+    "loguru>=0.7.2",
+    "defusedxml>=0.7.1",
+    "feedparser>=6.0.11",
+    "fake-useragent>=1.5.1",
+    "beautifulsoup4>=4.12.3",
+    "async-lru>=2.0.4",
+    "sse-starlette>=2.1.3",
+    "uvicorn>=0.30.5",
+    "requests>=2.32.3",
+]
+readme = "README.md"
+requires-python = ">= 3.12"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "pytest>=8.3.2",
+    "pytest-asyncio>=0.23.8",
+    "pytest-cov>=5.0.0",
+    "httpx>=0.27.0",
+    "httpx-sse>=0.4.0",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["web"]
