Remove interactiveness of `docker exec`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,6 +3,9 @@ on:
   push:
     paths:
       - '**.py'
+      - '**.yml'
+      - '**.yaml'
+      - '**.toml'
   pull_request:
   workflow_dispatch:
 
