--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -17,12 +17,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Spin up Docker containers and run tests inside the 'web' container
+      - name: Spin up Docker containers
         run: |
           cd server
           docker compose up -d
-          sleep 5
-          docker exec scidock-server-web-1 /app/etc/run_tests.sh
+      - name: Wait until container starts and establishes connections
+        run: sleep 5
+      - name: Run tests inside the 'web' container
+        run: docker exec scidock-server-web-1 /app/etc/run_tests.sh
       - name: Extract coverage report from the container
         run: docker cp scidock-server-web-1:/app/coverage.json .
       - name: Send coverage reports to Coveralls
