--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Wait until container starts and establishes connections
         run: sleep 5
       - name: Run tests inside the 'web' container
-        run: docker exec scidock-server-web-1 /app/etc/run_tests.sh
+        run: docker exec scidock-server-web-1 ./run_tests.sh
       - name: Extract coverage report from the container
         run: docker cp scidock-server-web-1:/app/coverage.json .
       - name: Send coverage reports to Coveralls
