Specify report file for Coveralls

--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -29,5 +29,7 @@ jobs:
         run: docker cp scidock-server-web-1:/app/coverage.json .
       - name: Send coverage reports to Coveralls
         uses: coverallsapp/github-action@v2
+        with:
+          file: coverage.json
       - name: Shut containers gracefully
         run: docker compose down
