--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Run tests inside the 'web' container
         run: docker exec scidock-server-web-1 ./run_tests.sh
       - name: Extract coverage report from the container
-        run: docker cp scidock-server-web-1:/app/coverage.json .
+        run: docker cp scidock-server-web-1:/app/coverage.lcov .
       - name: Send coverage reports to Coveralls
         uses: coverallsapp/github-action@v2
         with:
-          file: coverage.json
+          file: coverage.lcov
       - name: Shut containers gracefully
         run: docker compose down
