Change container shutdown behaviour

--- a/.github/workflows/test_server.yml
+++ b/.github/workflows/test_server.yml
@@ -32,4 +32,6 @@ jobs:
         with:
           base-path: server/web
       - name: Shut containers gracefully
-        run: docker compose down
+        run: |
+          cd server
+          docker compose down
